# minil

./: .gitignore  Cargo.toml  clippy.toml  deny.toml
lib/axum-body/: Cargo.toml
lib/axum-body/src/: both.rs  either.rs  empty.rs  error.rs  lib.rs  rejection.rs  utils.rs
lib/axum-body/tests/: both_test.rs  either_test.rs  empty_test.rs  utils.rs
lib/axum-header/: Cargo.toml
lib/axum-header/src/: error.rs  header.rs  lib.rs  rejection.rs
lib/axum-header/tests/: from_request_test.rs  integration_test.rs  into_response_test.rs  multi_integration_test.rs  single_integration_test.rs
lib/axum-s3/: Cargo.toml
lib/axum-s3/src/: create_bucket.rs  delete_bucket.rs  lib.rs  list_buckets.rs  list_objects.rs  list_objects_v2.rs
lib/axum-s3/src/check/: list_type_2.rs  location.rs  mod.rs  select.rs  tagging.rs  versioning.rs  versions.rs
lib/axum-s3/src/error/: access_denied.rs  bad_digest.rs  bucket_already_exists.rs  bucket_already_owned_by_you.rs  conditional_request_conflict.rs  encryption_type_mismatch.rs  entity_too_small.rs  incomplete_body.rs  internal_error.rs  invalid_digest.rs  invalid_object_state.rs  invalid_part.rs  invalid_part_order.rs  invalid_range.rs  invalid_region.rs  invalid_tag.rs  invalid_write_offset.rs  malformed_xml.rs  method_not_allowed.rs  mod.rs  no_such_bucket.rs  no_such_key.rs  no_such_tag_set.rs  no_such_upload.rs  no_such_version.rs  not_implemented.rs  operation_aborted.rs  precondition_failed.rs  too_many_parts.rs
lib/axum-s3/src/operation/: abort_multipart_upload.rs  complete_multipart_upload.rs  create_bucket.rs  create_multipart_upload.rs  delete_bucket.rs  delete_bucket_tagging.rs  delete_object.rs  delete_object_tagging.rs  get_bucket_location.rs  get_bucket_tagging.rs  get_bucket_versioning.rs  get_object.rs  get_object_tagging.rs  head_bucket.rs  head_object.rs  list_buckets.rs  list_multipart_uploads.rs  list_object_versions.rs  list_objects.rs  list_objects_v2.rs  list_parts.rs  mod.rs  put_bucket_tagging.rs  put_bucket_versioning.rs  put_object.rs  put_object_tagging.rs  upload_part.rs
lib/axum-s3/src/utils/: common.rs  common_ext.rs  error_parts.rs  get_bucket_location.rs  get_bucket_versioning.rs  list_objects_v2.rs  mod.rs
lib/axum-xml/: Cargo.toml
lib/axum-xml/src/: category.rs  lib.rs  xml.rs
lib/axum-xml/tests/: xml_test.rs
lib/serde-header/: Cargo.toml
lib/serde-header/src/: lib.rs  types.rs
lib/serde-header/src/de/: caseless_map.rs  mod.rs  name.rs  unit_only.rs  val_or_vec.rs  value.rs
lib/serde-header/src/ser/: entity.rs  error.rs  header.rs  mod.rs  name.rs  value.rs
lib/serde-header/tests/: de_ex_caseless_test.rs  de_ex_httparse_test.rs  de_ex_struct_test.rs  de_httparse_test.rs  de_test.rs  ser_ex_test.rs  ser_test.rs  utils.rs
lib/serde-rename-chain/: Cargo.toml
lib/serde-rename-chain/src/: attr.rs  convert_case.rs  error.rs  ident_case.rs  inflector.rs  lib.rs  rename_chain.rs  renamer.rs  str.rs
lib/serde-rename-chain/tests/: dynfmt_curly.rs  dynfmt_python.rs
lib/serde-s3/: Cargo.toml
lib/serde-s3/src/: lib.rs
lib/serde-s3/src/check/: list_type_2.rs  location.rs  mod.rs  select.rs  tagging.rs  versioning.rs  versions.rs
lib/serde-s3/src/operation/: abort_multipart_upload.rs  complete_multipart_upload.rs  create_bucket.rs  create_multipart_upload.rs  delete_bucket.rs  delete_bucket_tagging.rs  delete_object.rs  delete_object_tagging.rs  get_bucket_location.rs  get_bucket_tagging.rs  get_bucket_versioning.rs  get_object.rs  get_object_tagging.rs  head_bucket.rs  head_object.rs  list_buckets.rs  list_multipart_uploads.rs  list_object_versions.rs  list_objects.rs  list_objects_v2.rs  list_parts.rs  mod.rs  put_bucket_tagging.rs  put_bucket_versioning.rs  put_object.rs  put_object_tagging.rs  upload_part.rs
lib/serde-s3/src/types/: archive_status.rs  bucket.rs  bucket_canned_acl.rs  bucket_info.rs  bucket_location_constraint.rs  bucket_versioning_status.rs  checksum_algorithm.rs  checksum_mode.rs  checksum_type.rs  common_prefix.rs  completed_multipart_upload.rs  completed_part.rs  create_bucket_configuration.rs  data_redundancy.rs  delete_marker_entry.rs  encoding_type.rs  initiator.rs  list_all_my_buckets_result.rs  list_all_my_directory_buckets_result.rs  list_bucket_result.rs  list_bucket_result_v2.rs  list_parts_result.rs  list_versions_result.rs  location_constraint_result.rs  location_info.rs  location_type.rs  mfa_delete_status.rs  mod.rs  multipart_upload.rs  object.rs  object_canned_acl.rs  object_lock_legal_hold_status.rs  object_lock_mode.rs  object_ownership.rs  object_part.rs  object_storage_class.rs  object_version.rs  object_version_storage_class.rs  optional_object_attributes.rs  owner.rs  (+9 more)
lib/serde-with-extra/: Cargo.toml
lib/serde-with-extra/src/: as_string.rs  display_from_bytes.rs  http_range.rs  lib.rs  null_as_nil_uuid.rs  query.rs
libs/axum-extra-header/: Cargo.toml
libs/axum-extra-header/src/: header.rs  lib.rs  rejection.rs
libs/axum-extra-header/tests/: integration_test.rs
libs/axum-header/: Cargo.toml
libs/axum-header/src/: error.rs  extra.rs  header.rs  lib.rs  rejection.rs
libs/axum-header/tests/: extra_integration_test.rs  integration_test.rs
libs/serde-rename-chain/: Cargo.toml
libs/serde-rename-chain/src/: convert_case.rs  error.rs  heck.rs  ident_case.rs  inflector.rs  lib.rs  rename_chain.rs  renamer.rs  str.rs
libs/serde-rename-chain/tests/: strfmt.rs
libs/serde-s3/: Cargo.toml
libs/serde-s3/src/: create_bucket.rs  delete_bucket.rs  lib.rs  list_buckets.rs
main/config/: Cargo.toml
main/config/src/: error.rs  lib.rs
main/minil/: Cargo.toml
main/minil/src/: database_transaction.rs  error.rs  macros.rs  main.rs  make_request_id.rs  request_id.rs  service_builder_ext.rs  state.rs
main/service/: Cargo.toml
main/service/src/: bucket.rs  chunk.rs  error.rs  lib.rs  object.rs  owner.rs  part.rs  prelude.rs  stream.rs  tag.rs  tag_set.rs  upload.rs  upload_part.rs  version.rs  version_part.rs
minil/: Cargo.toml
minil/migrations/: 20250512112122_init.down.sql  20250512112122_init.up.sql
minil/src/: error.rs  main.rs
(+258 files in other folders)
