[workspace]
members = ["lib/*", "main/*"]
default-members = ["main/minil"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
bon = "3.6.4"
bytes = "1.10.1"
derive_more = { version = "2.0.1", features = ["full"] }
http = "1.3.1"
httparse = "1.10.1"
mime = "0.3.17"
strum = { version = "0.27.1", features = ["derive"] }
unicase = "2.8.1"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

axum = { version = "0.8.4", features = ["macros"] }
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", features = ["query"] }
axum-serde = { version = "0.9.0", features = ["full"] }
axum-test = "17.3.0"

crc-fast = "1.3.0"
digest = "0.10.7"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"

proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

sea-orm = { version = "1.1.13", features = ["debug-print", "runtime-tokio", "sqlite-use-returning-for-3_35", "sqlx-sqlite"] }
sea-orm-migration = { version = "1.1.13", features = ["runtime-tokio", "sqlx-sqlite", "with-uuid"] }

serde = { version = "1.0.219", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_with = "3.14.0"

tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }

axum-body = { path = "lib/axum-body" }
axum-derive-macros = { path = "lib/axum-derive-macros" }
axum-header = { path = "lib/axum-header" }
axum-s3 = { path = "lib/axum-s3" }
axum-s3-macros = { path = "lib/axum-s3-macros" }
ensure = { path = "lib/ensure" }
serde-header = { path = "lib/serde-header", features = ["full"] }
serde-rename-chain = { path = "lib/serde-rename-chain", features = ["full"] }
serde-s3 = { path = "lib/serde-s3" }
syn-utils = { path = "lib/syn-utils" }

minil-entity = { path = "main/entity" }
minil-migration = { path = "main/migration" }
minil-service = { path = "main/service" }

aws-sdk-s3 = "1.96.0"

[profile.release-size]
inherits = "release"
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
