[workspace]
members = ["lib/*", "main/*"]
default-members = ["main/minil"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
bon = "3.6.5"
bytes = "1.10.1"
bytesize = "2.0.1"
cap = "0.1.2"
derive_more = { version = "2.0.1", features = ["full"] }
futures = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
http-content-range = "0.2.3"
http-range-header = "0.4.2"
httparse = "1.10.1"
httpdate = "1.0.3"
indexmap = "2.10.0"
strum = { version = "0.27.2", features = ["derive"] }
unicase = "2.8.1"
uuid = { version = "1.17.0", features = ["fast-rng", "serde", "v4", "v7", "v8"] }

axum = { version = "0.8.4", features = ["macros"] }
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", features = ["cookie", "query", "scheme"] }
axum-serde = { version = "0.9.0", features = ["full"] }
axum-test = "17.3.0"

crc-fast = "1.3.0"
digest = "0.10.7"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"

darling = "0.21.0"
paste = "1.0.15"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["extra-traits", "full"] }

mime = "0.3.17"
mime_guess = "2.0.5"

sea-orm = { version = "1.1.14", features = ["runtime-tokio", "sqlx-postgres"] }
sea-orm-migration = { version = "1.1.14", features = ["runtime-tokio", "sqlx-postgres", "with-uuid"] }

serde = { version = "1.0.219", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0.142"
serde_path_to_error = "0.1.17"
serde_with = "3.14.0"

tokio = { version = "1.47.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.15", features = ["full"] }

tracing = { version = "0.1.41", features = ["log", "max_level_trace", "release_max_level_info"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

axum-body = { path = "lib/axum-body" }
axum-derive-macros = { path = "lib/axum-derive-macros" }
axum-filter-router = { path = "lib/axum-filter-router" }
axum-header = { path = "lib/axum-header" }
axum-s3 = { path = "lib/axum-s3" }
axum-s3-macros = { path = "lib/axum-s3-macros" }
ensure = { path = "lib/ensure" }
serde-header = { path = "lib/serde-header", features = ["full"] }
serde-rename-chain = { path = "lib/serde-rename-chain", features = ["full"] }
serde-s3 = { path = "lib/serde-s3" }
serde-with-extra = { path = "lib/serde-with-extra", features = ["full"] }
stringify-checked = { path = "lib/stringify-checked" }
syn-utils = { path = "lib/syn-utils" }
validator-extra = { path = "lib/validator-extra" }

minil-config = { path = "main/config" }
minil-entity = { path = "main/entity" }
minil-migration = { path = "main/migration" }
minil-service = { path = "main/service" }

[profile.release-size]
inherits = "release"
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
