[workspace]
members = ["lib/*", "main/*"]
default-members = ["main/minil"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22.1"
bon = "3.7.0"
bytes = "1.10.1"
bytesize = "2.0.1"
cap = "0.1.2"
derive_more = { version = "2.0.1", features = ["full"] }
futures = "0.3.31"
hex = "0.4.3"
indexmap = "2.10.0"
strum = { version = "0.27.2", features = ["derive"] }

# axum
axum = { version = "0.8.4", features = ["macros"] }
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", features = ["cookie", "query", "scheme"] }
axum-serde = { version = "0.9.0", features = ["full"] }
axum-test = "17.3.0"

# digest
crc-fast = "1.4.0"
digest = "0.10.7"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"

# http
http = "1.3.1"
# http-body = "1.0.1"
# http-body-util = "0.1.3"

# header
http-content-range = "0.2.3"
http-range-header = "0.4.2"
httparse = "1.10.1"
httpdate = "1.0.3"

# macro
darling = "0.21.2"
paste = "1.0.15"
proc-macro2 = "1.0.97"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["extra-traits", "full"] }

# mime
mime = "0.3.17"
mime_guess = "2.0.5"

# query
# form_urlencoded = "1.2.1"
serde_html_form = "0.2.7"
serde_urlencoded = "0.7.1"

# sea-orm
sea-orm = { version = "1.1.14", features = ["runtime-tokio", "sqlx-postgres"] }
sea-orm-migration = { version = "1.1.14", features = ["runtime-tokio", "sqlx-postgres", "with-uuid"] }
# sea-query = { version =  "0.32.7", features = ["all-features"] }

# serde
serde = { version = "1.0.219", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0.142"
serde_path_to_error = "0.1.17"
serde_with = "3.14.0"

# tokio
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.16", features = ["full"] }

# tower
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }

# tracing
tracing = { version = "0.1.41", features = ["log", "max_level_trace", "release_max_level_info"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# uuid
# newtype-uuid = "1.2.4"
uuid = { version = "1.18.0", features = ["fast-rng", "serde", "v4", "v8"] }

# lib
axum-body = { path = "lib/axum-body" }
axum-derive-macros = { path = "lib/axum-derive-macros" }
axum-filter-router = { path = "lib/axum-filter-router" }
axum-header = { path = "lib/axum-header" }
axum-s3 = { path = "lib/axum-s3" }
axum-s3-macros = { path = "lib/axum-s3-macros" }
ensure = { path = "lib/ensure" }
http-digest = { path = "lib/http-digest" }
sea-orm-ext = { path = "lib/sea-orm-ext" }
serde-header = { path = "lib/serde-header", features = ["full"] }
serde-rename-chain = { path = "lib/serde-rename-chain", features = ["full"] }
serde-s3 = { path = "lib/serde-s3" }
serde-with-extra = { path = "lib/serde-with-extra", features = ["full"] }
stringify-checked = { path = "lib/stringify-checked" }
syn-utils = { path = "lib/syn-utils" }
validator-extra = { path = "lib/validator-extra" }

# main
minil-config = { path = "main/config" }
minil-entity = { path = "main/entity" }
minil-migration = { path = "main/migration" }
minil-service = { path = "main/service" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
cargo = { level = "allow", priority = -1 }

nursery = { level = "allow", priority = -1 }

pedantic = { level = "warn", priority = -1 }
cast-possible-truncation = "allow" # fixme
cast-possible-wrap = "allow" # fixme
cast-sign-loss = "allow" # fixme
missing-errors-doc = "allow"
missing-panics-doc = "allow"
too-many-lines = "allow"

restriction = { level = "allow", priority = -1 }

[profile.release-size]
inherits = "release"
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
