[package]
name = "minil"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "macros", "multipart"] }
sqlx = { version = "0.8.5", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

axum-header.workspace = true
axum-xml.workspace = true
serde-s3.workspace = true
