[package]
name = "minil"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["query"] }
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.4", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

tokio = { workspace = true, features = ["full"] }

axum-extra-header.workspace = true
axum-xml.workspace = true
serde-s3.workspace = true
