[package]
name = "axum-body"
version = "0.2.0"
edition.workspace = true

[dependencies]
axum-core.workspace = true
bytes.workspace = true
derive_more.workspace = true
http.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
serde_urlencoded = "0.7.1"

axum.workspace = true
mime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
