[package]
name = "axum-body"
version = "0.2.2"
edition.workspace = true

[dependencies]
tokio-stream = { version = "0.1.17", features = ["full"] }

axum-core.workspace = true
bytes.workspace = true
derive_more.workspace = true
http.workspace = true

[dev-dependencies]
serde_urlencoded = "0.7.1"

axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
