[package]
name = "axum-header"
version = "0.3.3"
edition.workspace = true

[features]
default = ["multi"]
single = ["dep:serde_urlencoded"]
multi = ["dep:serde_html_form"]

[dependencies]
form_urlencoded = "1.2.1"

serde_html_form = { version = "0.2.7", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }

axum-core.workspace = true
derive_more.workspace = true
http.workspace = true
serde.workspace = true
serde_path_to_error.workspace = true

[dev-dependencies]
axum.workspace = true
axum-test.workspace = true
tokio.workspace = true
