[package]
name = "axum-header"
version = "0.5.2"
edition.workspace = true

[dependencies]
axum-core.workspace = true
derive_more.workspace = true
http.workspace = true
serde.workspace = true
serde_path_to_error.workspace = true

serde-header.workspace = true

[dev-dependencies]
itertools = "0.14.0" # https://github.com/rust-lang/rust/issues/79524

axum.workspace = true
axum-test.workspace = true
tokio.workspace = true
