[package]
name = "axum-header"
version = "0.5.2"
edition.workspace = true

[dependencies]
axum-core.workspace = true
derive_more.workspace = true
http.workspace = true
serde.workspace = true
serde_path_to_error.workspace = true

serde-header.workspace = true

[dev-dependencies]
axum.workspace = true
axum-test.workspace = true
tokio.workspace = true

[lints]
workspace = true
