[package]
name = "axum-s3"
version = "0.3.6"
edition.workspace = true

[dependencies]
axum.workspace = true
axum-extra.workspace = true
bon.workspace = true

axum-header.workspace = true
axum-into-response.workspace = true
axum-xml.workspace = true
serde-s3.workspace = true

axum-s3-macros.workspace = true
