[package]
name = "axum-s3"
version = "0.5.6"
edition.workspace = true

[dependencies]
axum.workspace = true
axum-derive-macros.workspace = true
axum-extra.workspace = true
axum-serde.workspace = true
bon.workspace = true

axum-body.workspace = true
axum-header.workspace = true
serde-s3.workspace = true

axum-s3-macros.workspace = true

[lints]
workspace = true
