[package]
name = "axum-xml"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytes = "1.10.1"
mime = "0.3.17"
quick-xml = { version = "0.37.5", features = ["serialize"] }

axum-core.workspace = true
http.workspace = true
serde.workspace = true
serde_path_to_error.workspace = true

[dev-dependencies]
axum.workspace = true
axum-test.workspace = true
tokio.workspace = true
