[package]
name = "serde-header"
version = "0.2.0"
edition.workspace = true

[features]
default = ["caseless", "http"]
caseless = []
http = ["dep:http"]
httparse = ["dep:httparse"]
unicase = ["dep:unicase"]
full_slim = ["default", "httparse"]
full = ["full_slim", "unicase"]

[dependencies]
indexmap = "2.10.0"

serde.workspace = true

http = { workspace = true, optional = true }
httparse = { workspace = true, optional = true }
unicase = { workspace = true, optional = true }
