[package]
name = "serde-header"
version = "0.3.1"
edition.workspace = true

[features]
default = ["itoa", "ryu", "caseless", "http"]

itoa = ["dep:itoa"]
ryu = ["dep:ryu"]

caseless = []

http = ["dep:http"]
httparse = ["dep:httparse"]

unicase = ["dep:unicase"]

full_slim = ["default", "httparse"]
full = ["full_slim", "unicase"]

[dependencies]
indexmap = "2.10.0"

derive_more.workspace = true
serde.workspace = true

itoa = { version = "1.0.15", optional = true }
ryu = { version = "1.0.20", optional = true }

http = { workspace = true, optional = true }
httparse = { workspace = true, optional = true }

unicase = { workspace = true, optional = true }
