[package]
name = "serde-header"
version = "0.3.3"
edition.workspace = true

[features]
default = ["numeric", "caseless", "http"]

itoa = ["dep:itoa"]
ryu = ["dep:ryu"]
numeric = ["itoa", "ryu"]

caseless = []

http = ["dep:http"]
httparse = ["dep:httparse"]

unicase = ["dep:unicase"]

full_slim = ["default", "httparse"]
full = ["full_slim", "unicase"]

[dependencies]
derive_more.workspace = true
indexmap.workspace = true
serde.workspace = true

itoa = { version = "1.0.15", optional = true }
ryu = { version = "1.0.20", optional = true }

http = { workspace = true, optional = true }
httparse = { workspace = true, optional = true }

unicase = { version = "2.8.1", optional = true }

[lints]
workspace = true
