[package]
name = "serde-rename-chain"
version = "0.3.1"
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = { version = "0.8.0", optional = true }
heck = { version = "0.5.0", optional = true }
ident_case = { version = "1.0.1", optional = true }
Inflector = { version = "0.11.4", default-features = false, optional = true }

strfmt = { version = "0.2.4", optional = true }
dynfmt = {version = "0.1.5", optional = true}

derive_more.workspace = true
proc-macro2.workspace = true
quote.workspace = true
strum.workspace = true
syn.workspace = true

syn-utils.workspace = true

[dev-dependencies]
serde_json = "1.0.140"

serde.workspace = true

[features]
default = ["ident_case"]

convert_case = ["dep:convert_case"]
convert_case_random = ["convert_case", "convert_case/random"]

heck = ["dep:heck"]

ident_case = ["dep:ident_case"]

inflector = ["dep:Inflector"]
inflector_heavyweight = ["inflector", "Inflector/heavyweight"]

strfmt = ["dep:strfmt"]

_dynfmt = ["dep:dynfmt"]
dynfmt_python = ["_dynfmt", "dynfmt/python"]
dynfmt_curly = ["_dynfmt", "dynfmt/curly"]

full_slim = ["convert_case", "ident_case", "inflector", "strfmt"]
full = ["full_slim", "convert_case_random", "inflector_heavyweight", "dynfmt_curly"]
