[package]
name = "serde-s3"
version = "0.3.1"
edition.workspace = true

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde-inline-default = "0.2.3"
serde_with = "3.13.0"
serdev = "0.2.0" # https://github.com/serde-rs/serde/pull/2891
tynm = "0.2.0"
validator = { version = "0.20.0", features = ["derive"] }

bon.workspace = true
derive_more.workspace = true
serde.workspace = true
uuid.workspace = true

serde-rename-chain.workspace = true

[dev-dependencies]
aws-sdk-s3.workspace = true
