[package]
name = "serde-s3"
version = "0.4.6"
edition.workspace = true

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serdev = "0.2.0" # https://github.com/serde-rs/serde/pull/2891
validator = { version = "0.20.0", features = ["derive"] }

bon.workspace = true
derive_more.workspace = true
http-content-range.workspace = true
http-range-header.workspace = true
mime.workspace = true
serde.workspace = true
serde-inline-default.workspace = true
serde_with.workspace = true
uuid.workspace = true

serde-rename-chain.workspace = true
serde-with-extra.workspace = true
stringify-checked.workspace = true
validator-extra.workspace = true
