[package]
name = "serde-with-extra"
version = "0.2.0"
edition.workspace = true

[features]
default = []
http-range = ["dep:http-content-range", "dep:http-range-header"]
full = ["http-range"]

[dependencies]
serde.workspace = true
serde_with.workspace = true

http-content-range = { workspace = true, optional = true }
http-range-header = { workspace = true, optional = true }
