[package]
name = "axum-extra-header"
version = "0.1.0"
edition.workspace = true

[dependencies]
form_urlencoded = "1.2.1"
serde_html_form = "0.2.7"

axum-core.workspace = true
http.workspace = true
serde.workspace = true
serde_path_to_error.workspace = true

[dev-dependencies]
axum.workspace = true
axum-test.workspace = true
tokio.workspace = true
