[package]
name = "axum-header"
version = "0.1.0"
edition.workspace = true

[dependencies]
form_urlencoded = "1.2.1"
serde_urlencoded = "0.7.1"

axum-core.workspace = true
http.workspace = true
serde.workspace = true
serde_path_to_error.workspace = true

[dev-dependencies]
axum.workspace = true
axum-test.workspace = true
tokio.workspace = true
