[package]
name = "serde-rename-chain"
version = "0.2.4"
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
strum = { version = "0.27.1", features = ["derive"] }

convert_case = { version = "0.8.0", optional = true }
crabtime = { version = "1.1.3", optional = true }
heck = { version = "0.5.0", optional = true }
ident_case = { version = "1.0.1", optional = true }
Inflector = { version = "0.11.4", default-features = false, optional = true }

proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

syn-utils.workspace = true

[dev-dependencies]
serde.workspace = true

[features]
default = ["ident_case"]
convert_case = ["dep:convert_case"]
convert_case_random = ["convert_case", "convert_case/random"]
crabtime = ["dep:crabtime"]
heck = ["dep:heck"]
ident_case = ["dep:ident_case"]
inflector = ["dep:Inflector"]
inflector_heavyweight = ["inflector", "Inflector/heavyweight"]
full_slim = ["convert_case", "ident_case", "inflector"]
full = ["full_slim", "convert_case_random", "crabtime", "inflector_heavyweight"]
