[package]
name = "serde-s3"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde-inline-default = "0.2.3"
serde_with = "3.12.0"
validator = { version = "0.20.0", features = ["derive"] }

serde.workspace = true
serde-rename-chain.workspace = true

[dev-dependencies]
aws-sdk-s3.workspace = true
