[package]
name = "minil"
version = "0.2.0"
edition.workspace = true

[features]
default = []
ranged-part = []
full = ["ranged-part"]

[dependencies]
base64 = "0.22.1"
dotenvy = "0.15.7"
serde_plain = "1.0.2" # todo
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
urlencoding = "2.1.3"

axum.workspace = true
axum-extra.workspace = true
bytesize.workspace = true
cap.workspace = true
derive_more.workspace = true
digest.workspace = true
futures.workspace = true
http-content-range.workspace = true
indexmap.workspace = true
paste.workspace = true
sea-orm.workspace = true
sha2.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

axum-s3.workspace = true
ensure.workspace = true
serde-s3.workspace = true

minil-config.workspace = true
minil-migration.workspace = true
minil-service.workspace = true
