[package]
name = "minil"
version = "0.2.3"
edition.workspace = true

[features]
default = []

create-delete = []
ranged-part = []
separate-version = []

content-type = []

full = ["create-delete", "ranged-part", "separate-version", "content-type"]

[dependencies]
base64 = "0.22.1"
dotenvy = "0.15.7"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
urlencoding = "2.1.3"

axum.workspace = true
axum-extra.workspace = true
bytesize.workspace = true
cap.workspace = true
derive_more.workspace = true
futures.workspace = true
http-content-range.workspace = true
indexmap.workspace = true
rand.workspace = true
rand_seeder.workspace = true
sea-orm.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

axum-filter-router.workspace = true
axum-s3.workspace = true
ensure.workspace = true
serde-s3.workspace = true

minil-config.workspace = true
minil-migration.workspace = true
minil-service.workspace = true
