[package]
name = "minil"
version = "0.2.3"
edition.workspace = true

[features]
default = []

create-delete = []
ranged-part = []
separate-version = []

full = ["create-delete", "ranged-part", "separate-version"]

[dependencies]
dotenvy = "0.15.7"
urlencoding = "2.1.3"

async-stream.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
bytesize.workspace = true
cap.workspace = true
derive_more.workspace = true
futures.workspace = true
http-content-range.workspace = true
indexmap.workspace = true
md-5.workspace = true
sea-orm.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

axum-filter-router.workspace = true
axum-s3.workspace = true
ensure.workspace = true
http-digest.workspace = true
serde-s3.workspace = true

minil-config.workspace = true
minil-migration.workspace = true
minil-service.workspace = true
