[package]
name = "minil-service"
version = "0.4.0"
edition.workspace = true

[dependencies]
async-stream = "0.3.6"
infer = "0.19.0"

bytes.workspace = true
bytesize.workspace = true
crc-fast.workspace = true
derive_more.workspace = true
digest.workspace = true
futures.workspace = true
md-5.workspace = true
mime.workspace = true
mime_guess.workspace = true
sea-orm.workspace = true
sha1.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

minil-entity.workspace = true
